...
      >
      <SafeAreaView>
        <ScrollView style={{width: '100%'}}>
          <Text
            style={styles.boldText}
          >
            Twoje pytania i odpowiedzi
          </Text>
          <View style={styles.excercisesCardsSection}>
            {loading ? (
              <ActivityIndicator testID="loading-indicator" color="gray" style={{ margin: 15 }} />
            ) : null}
            {filteredExercises.map(excercise => {
...
